--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <ul>
 <li><a href="index.html">Home</a><li>
 <li><a href="Produtos.html">Produtos</a></li>
-<li>Contato</li>
+<li><a href="Contato.html">Contato</a></li>
 </ul>
 </header>
 </body>
