--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <body>
 <header>
   <image src ="logo.png"></image>
-  <ul>
+  <nav>
+<ul>
 <li><a href="index.html">Home</a><li>
 <li><a href="Produtos.html">Produtos</a></li>
 <li><a href="Contato.html">Contato</a></li>
 </ul>
+</nav>
 </header>
 </body>
 </html>
